--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ target {
 
 body {
 
-	background-color: gray;
+	background-color: white;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Ephesis&family=Montserrat&family=Roboto:wght@400;500&display=swap');
@@ -18,9 +18,47 @@ body {
 
 h2 {
 	font-family: 'Montserrat', sans-serif;
+	color: #007bff;
 }
 
 h1{
 	font-family: 'Ephesis', cursive;
 	font-size: 54px;
+}
+
+img {
+	width: 250px;
+	border-radius: 50%;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+}
+
+#landing,
+#gallery {
+	height: 80vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.tools{
+	padding: 25px;
+	height: 200px;
+	border: 5px solid #f2f2f2;
+	margin: 20px;
+	width: 75%;
+	color: white;
+}
+
+.nav-link {
+	text-transform: uppercase;
+
+}
+
+html{
+	scroll-behavior: smooth;
 }
